<resources>
    <string name="app_name">Nziyo DzeMethodist</string>
    <string name="hymnNumberButtonText">Number</string>
    <string name="aboutButtonText">About</string>
    <string name="hymnListButtonText">Hymn List</string>
    <string name="churchHymnListButtonText">Church Hymns</string>
    <string name="updateHymnButtonText">Update</string>
    <string name="favButtonText">Favourites</string>
    <string name="notesButtonText">Notes</string>
    <string name="recordingsButtonText">Recordings</string>
    <string name="recentButtonText">Recent</string>
    <string name="splashButtonText">Splash</string>
    <string name="underlineButtonText">Underlines</string>
    <string name="captionButtonText">Captions</string>
    <string name="postsButtonText">Posts</string>
    <string name="readingsText">Readings</string>
    <string name="eventsText">Events</string>
    <string name="title_activity_pick_num">pickNum</string>
    <string name="Accept">Yes</string>
    <string name="Deny">No</string>
    <string name="noFavoritesText">No Favorites yet…</string>
    <string name="noNotesCaptionsText">No Notes yet…</string>
    <string name="noRecordingsCaptionsText">No Recordings yet…</string>
    <string name="noUnderlinesText">Nothing underlined yet…</string>
    <string name="noCaptionsText">No Captions found by the update yet…</string>
    <string name="noReadings">No Readings found in the database yet…</string>
    <string name="noRecentText">No Recent songs yet…</string>
    <string name="noResultsText">No Results found…</string>
    <string name="thisWeekTitle">This Week</string>
    <string name="announcements">Announcements</string>
    <string name="account_management_title">Account Management</string>
    <string name="hymn_banner_ad_unit_id">ca-app-pub-2945410942325181/9087063951</string>
    <string name="reading_banner_ad_unit_id">ca-app-pub-2945410942325181/5275511400</string>
    <string name="facebook_app_id">466941583699230</string>
    <string name="ADMOB_APP_ID">ca-app-pub-2945410942325181~6133597558</string>


    <string name="title_activity_settings">Settings</string>

    <string name="en_hymn_list">2,5,10,13,17,18,20,23,24,26,27,28,32,33,38,39,40,42,43,44,47,48,49,53,57,58,63,85,94,98,99,103,104,107,108,120,123,127,138,141,144,147,152,154,153,155,160,164,163,173,181,186,195,204,217,235,250,251,267,293,</string>

    <string name="notification_date_string">11 September 2017</string>
    <string name="notification_text_string">
        In this update, I won\'t have the say\n\n\n\n

        I\'ll just say, enjoy the Bible Readings feature and the English search engine.\n\n\n

        Feel free to star and review the HymnBook. I\'ll be updating the bubbles weekly.\n\n\n

        Its been a pleasure listening to the reviews and trying to accomplish them. I hope the foundation is already set and strong, for there will be expansions,extension and upgrades that have to be as trusted like before.But let our might be used for praise. If what I do isn\'t for God\'s glory, then let me glorify God instead.\n\n

        Blessing F. Charumbira\n\n
    </string>

    <string name="is_maindrawer_open">false</string>

    <string name="new_features">
        -Sunday Readings\n
        -User Authentication\n
        -Glass panels on Hymn Number\n
        -Bookmark Feature modified.\n
        -Access the Bookmark Feature by long clicking your stanza\n
        -Splash Screen Background new animation\n
        -Smooth navigation through hymns directly in the menu bar, next and previous hymn\n
        -Card Feature Modified\n
        -Access Card Feature by long clicking your stanza\n
        -Built in KJV Bible for Bible readings, or open in your Bible app.\n
        -Small help animations added, but however, it is still the same\n\n
    </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Set name</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Every day</item>
        <item>Every Sunday</item>
        <item>Every 2 weeks</item>
        <item>Every monthId</item>
        <item>Every quarter</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>7</item>
        <item>14</item>
        <item>31</item>
        <item>120</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Set notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="test_button_label">Test</string>
    <string name="saveText">Save</string>
    <string name="add_readings">Add Readings</string>
    <string name="sign_in_text">Sign In to view</string>
    <string name="title">Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="gotoToday">Go to Today</string>
    <string name="searchButtonText">Search</string>

</resources>
