<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seven.clip.nziyodzemethodist.MainDrawer">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com..seven.clip.nziyodzemethodist.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/naturehd"
            android:scaleType="centerCrop"
            android:id="@+id/bg" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="380dp"
            android:layout_marginLeft="-100dp"
            android:rowCount="3"
            android:columnCount="3"
            android:rotation="45"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/gridLayout"
            android:layout_alignParentLeft="true">

            <Button
                android:layout_width="@dimen/buttonSquareSize"
                android:layout_height="@dimen/buttonSquareSize"
                android:background="@drawable/circle"
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/hymnNumberBut" />

            <Button
                android:layout_width="@dimen/buttonSquareSize"
                android:layout_height="@dimen/buttonSquareSize"
                android:background="@drawable/circle"
                android:layout_row="0"
                android:layout_column="1"
                android:id="@+id/hymnListBut" />
            <Button
                android:layout_width="@dimen/buttonSquareSize"
                android:layout_height="@dimen/buttonSquareSize"
                android:background="@drawable/circle"
                android:layout_row="2"
                android:layout_column="2"
                android:id="@+id/captionsListBut"/>

            <Button
                android:layout_width="@dimen/buttonSquareSize"
                android:layout_height="@dimen/buttonSquareSize"
                android:background="@drawable/circle"
                android:id="@+id/favBut"
                android:layout_row="1"
                android:layout_column="1" />

            <Button
                android:layout_width="@dimen/buttonSquareSize"
                android:layout_height="@dimen/buttonSquareSize"
                android:background="@drawable/circle"
                android:id="@+id/recentBut"
                android:layout_row="1"
                android:layout_column="2" />

            <com.crystal.crystalpreloaders.widgets.CrystalPreloader
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:crs_pl_style="tornado_circle_1"
                android:layout_row="0"
                android:layout_column="0"
                app:crs_pl_size="small"
                app:crs_pl_fg_color="#ffffff"
                app:crs_pl_bg_color="#000000"
                android:alpha="0"
                android:id="@+id/loadingNums"/>

            <com.crystal.crystalpreloaders.widgets.CrystalPreloader
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:crs_pl_style="tornado_circle_3"
                android:layout_row="0"
                android:layout_column="1"
                app:crs_pl_size="small"
                app:crs_pl_fg_color="#ffffff"
                app:crs_pl_bg_color="#000000"
                android:alpha="0"
                android:id="@+id/loadingList"/>

            <com.crystal.crystalpreloaders.widgets.CrystalPreloader
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:crs_pl_style="expandable_balls"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                app:crs_pl_size="small"
                app:crs_pl_fg_color="#ffffff"
                app:crs_pl_bg_color="#000000"
                android:layout_gravity="center_horizontal"
                android:alpha="0"
                android:id="@+id/loadingFavs"/>

            <com.crystal.crystalpreloaders.widgets.CrystalPreloader
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:crs_pl_style="hasher"
                android:layout_row="0"
                android:layout_column="2"
                app:crs_pl_size="small"
                app:crs_pl_fg_color="#ffffff"
                app:crs_pl_bg_color="#000000"
                android:alpha="0"
                android:id="@+id/loadingRecents"/>

            <TextView
                android:text="@string/hymnNumberButtonText"
                android:textSize="@dimen/mainTextButtonsSize"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:rotation="-45"
                android:textColor="@color/white"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:layout_column="0"
                android:layout_row="0"
                android:elevation="100dp"
                android:id="@+id/hymnNumText"
                android:fontFamily="sans-serif"
                android:textAlignment="center" />

            <TextView
                android:text="@string/hymnListButtonText"
                android:textSize="@dimen/mainTextButtonsSize"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:rotation="-45"
                android:textColor="@color/white"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:layout_column="1"
                android:layout_row="0"
                android:elevation="100dp"
                android:id="@+id/hymnListText"
                android:fontFamily="sans-serif"
                android:textAlignment="center" />

            <TextView
                android:text="@string/favButtonText"
                android:textSize="@dimen/mainTextButtonsSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:rotation="-45"
                android:textColor="@color/white"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:layout_column="1"
                android:layout_row="1"
                android:elevation="100dp"
                android:id="@+id/favText"
                android:fontFamily="sans-serif"
                android:textAlignment="center" />

            <TextView
                android:text="@string/recentButtonText"
                android:textSize="@dimen/mainTextButtonsSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:rotation="-45"
                android:textColor="@color/white"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:layout_column="2"
                android:layout_row="1"
                android:elevation="100dp"
                android:id="@+id/recentText"
                android:fontFamily="sans-serif"
                android:textAlignment="center" />

            <TextView
                android:text="@string/captionButtonText"
                android:textSize="@dimen/mainTextButtonsSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:rotation="-45"
                android:textColor="@color/white"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:layout_column="2"
                android:layout_row="2"
                android:elevation="100dp"
                android:id="@+id/captionText"
                android:fontFamily="sans-serif"
                android:textAlignment="center" />

        </GridLayout>

            <Button
                android:text="test button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/test"
                android:visibility="invisible"
                android:shadowColor="@color/black"
                android:layout_alignParentRight="true" />

        <TextView
            android:text=" Nziyo DzeMethodist"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="cursive"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:shadowRadius="15.0"
            android:shadowDy="12.0"
            android:shadowDx="5.0"
            android:shadowColor="@color/black"
            android:layout_centerHorizontal="true"
            android:id="@+id/mainAppTitle" />

        <ImageView
            app:srcCompat="@drawable/menu_icon"
            android:id="@+id/openMainDrawer"
            android:layout_margin="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            app:srcCompat="@drawable/menu_icon_on"
            android:id="@+id/openMainDrawer_on"
            android:layout_margin="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            app:srcCompat="@drawable/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            android:layout_margin="7dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <ImageView
            app:srcCompat="@drawable/search_icon_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:id="@+id/searchButton_on"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/square_nav"
        app:itemTextColor="@color/burn"
        android:id="@+id/startNavigationView"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start">


    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>

